--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,36 +1,36 @@
-name: CI - Build and Test
+name: CI for OrderProcessing
 
 on:
   push:
-    branches: [main, development, feature/*] # Runs on push to these branches
+    branches: [ main, development, feature/* ]
   pull_request:
-    branches: [main, development]  # Runs on PRs to these branches
+    branches: [ main, development ]
 
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Setup .NET Core
-        uses: actions/setup-dotnet@v3
-        with:
-          dotnet-version: '8.0.x'  # Match your project version
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: '8.0.x'
 
-      - name: Restore dependencies
-        run: dotnet restore
+    - name: Restore dependencies
+      run: dotnet restore OrderProcessing/OrderProcessing.csproj
+      working-directory: .
 
-      - name: Build solution
-        run: dotnet build --no-restore --configuration Release
+    - name: Restore test dependencies
+      run: dotnet restore OrderProcessing.Tests/OrderProcessing.Tests.csproj
+      working-directory: .
 
-      - name: Run tests
-        run: dotnet test OrderProcessing.Tests/OrderProcessing.Tests.csproj --no-build --configuration Release --logger trx --results-directory TestResults
+    - name: Build
+      run: dotnet build --no-restore --configuration Release
+      working-directory: .
 
-      - name: Upload Test Results
-        uses: actions/upload-artifact@v3
-        if: always()
-        with:
-          name: TestResults
-          path: TestResults/
+    - name: Run tests
+      run: dotnet test --no-build --verbosity normal
+      working-directory: .
