--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,17 +20,10 @@ jobs:
         dotnet-version: '8.0.x'
 
     - name: Restore dependencies
-      run: dotnet restore OrderProcessing/OrderProcessing.csproj
-      working-directory: .
-
-    - name: Restore test dependencies
-      run: dotnet restore OrderProcessing.Tests/OrderProcessing.Tests.csproj
-      working-directory: .
+      run: dotnet restore OrderProcessingSolution.sln
 
     - name: Build
-      run: dotnet build --no-restore --configuration Release
-      working-directory: .
+      run: dotnet build OrderProcessingSolution.sln --no-restore --configuration Release
 
     - name: Run tests
-      run: dotnet test --no-build --verbosity normal
-      working-directory: .
+      run: dotnet test OrderProcessingSolution.sln --no-build --verbosity normal
